tests/ui/stmt_after_ret_expr.stderr
[tests/ui/stmt_after_ret_expr.pea:4:5-4:11] error: expected `}`, found: `println`

error: aborting due to 1 previous error

