tests/ui/stmt_after_ret_expr.pea
fn foo(b) {
    let a = b % 3;
    a
    println!(a);
}
